# projet_BrokerX

./: .env  .env_docker  Cargo.toml  Dockerfile  class.md  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml
account-service/: Cargo.toml  Dockerfile  main.rs
account-service/infrastructure/persistance/: account_model.rs  client_model.rs
account-service/service/: mod.rs
account-service/src/: main.rs  schema.rs
account-service/src/domain/: account.rs  client.rs
account-service/src/infrastructure/persistance/: mod.rs
account-service/src/service/: account_service.rs  auth_middleware.rs  db.rs  login.rs  mfa.rs  mod.rs
account-service/src/web/: mod.rs
account-service/src/web/handlers/: account_handler.rs  login_handler.rs  register_handler.rs
account-service/web/: api_doc.rs  mod.rs  routes.rs
account-service/web/handlers/: login_handler.rs  mod.rs
brokerx-auth/: Cargo.toml
brokerx-auth/src/: lib.rs  middleware.rs
brokerx-types/: Cargo.toml
brokerx-types/src/: lib.rs
database/: script.sql
docs/: arc42_phase2.md  rendu_arc42.md
docs/adr/: adr001.md  adr002.md  adr003.md
migrations/2025-10-21-213933-0000_create_clients_accounts_portefeuilles/: down.sql  up.sql
monitoring/: prometheus.yml
portefeuille-service/: Cargo.toml  Dockerfile
portefeuille-service/src/: main.rs
src/: main.rs  ui.rs
src/domain/: account.rs  client.rs  mod.rs  portefeuille.rs  transaction.rs
src/infrastructure/: mod.rs
src/services/: account_service.rs  auth.rs  auth2.rs  metrics.rs  mfa.rs  mod.rs  (+1 more)
src/web/: mod.rs  (+2 more)
tests/: integration_test.rs
(+27 files in other folders)
