[package]
name = "BrokerX"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
diesel = { version = "2.3.2", features = ["postgres"] }
rand = "0.9.2"
dotenv = "0.15.0"

axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"