[package]
name = "account-service"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
diesel = { version = "2.3.2", features = ["postgres"] }
rand = "0.9.2"
dotenv = "0.15.0"
brokerx-types = { path = "../brokerx-types" }


axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["json"]}
prometheus = "0.14.0"
reqwest = {version = "0.12.24", features = ["json"]}


[[bin]]
name = "account-service"
path = "src/main.rs"
